# tear

./: CMakeLists.txt  main.c
collection/: binary_search_tree.c  binary_search_tree.h  binary_tree.c  binary_tree.h  linked_list.c  linked_list.h  queue.c  queue.h  stack.c  stack.h
unicode/: unicode.h
unicode/utf8/: utf8.h
util/: types.h  util.h
